# sagemaker-processing-training-experiments-test

./: Dockerfile_preprocess  Dockerfile_train  README.md  pyproject.toml
.github/workflows/: deploy.yml
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: sage-maker-processing-training-experiments-test-stack.ts
src/: preprocess.py  run.py  train.py
test_data/: raw.csv
