[tool.poetry]
name = "sagemaker-experiments-test"
version = "0.1.0"
description = ""
authors = ["sambaiz <godgourd@gmail.com>"]
packages = [{include = "src/*"}]

[tool.poetry.dependencies]
python = "^3.11"
sagemaker-training = "^4.4.10"
sagemaker = "^2.146.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
